# fabstir-vectordb

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.production  LICENSE  NOTICE  README.md  docker-compose.dev.yml  docker-compose.real-s5.yml  docker-compose.yml  start-fabstir-vectordb-prod.sh
benches/: chunked_search_bench.rs  vector_ops.rs
bindings/js/: package-lock.json  package.json  tsconfig.json
bindings/js/src/: client.ts  errors.ts  index.ts  types.ts
bindings/node/: .npmignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package-lock.json  package.json
bindings/node/services/: README.md  package-lock.json  package.json  s5-http-service.js
bindings/node/src/: error.rs  lib.rs  session.rs  types.rs  utils.rs
bindings/node/test/: REAL_S5_TESTING.md  chunked-load.test.js  debug-search.test.js  delete-by-metadata.test.js  delete-vector.test.js  e2e-chunked.test.js  e2e-crud-simple.test.js  e2e-crud.test.js  s5-integration.test.js  schema-validation.test.js  search-filter.test.js  session-config.test.js  session.test.js  small-dataset.test.js  test-dimension-validation.js  test-gt-lt-operators.js  test-include-vectors.js  test-sdk-reproduction.js  test-session-diagnostics.js  test-soft-deletion.js  test-topk-bug.js  test-topk-diagnostics.js  update-metadata.test.js  vacuum-real-s5-manual.js  vacuum-real-s5.test.js  vacuum.test.js
bindings/node/test/helpers/: s5-service.cjs  start-s5-service.js
bindings/wasm/: Cargo.toml
bindings/wasm/src/: index.rs  lib.rs  utils.rs  vector.rs  video.rs
docs/: API.md  DEPLOYMENT.md  IMPLEMENTATION.md  IMPLEMENTATION_CHUNKED.md  IMPLEMENTATION_V0.2.0_CRUD.md  IMPLEMENTATION_VECTORDB_WASM_BINDINGS.md  PERFORMANCE_TUNING.md  PHASE_8_1_IMPLEMENTATION_SUMMARY.md  PHASE_8_2_IMPLEMENTATION_SUMMARY.md  PHASE_8_3_IMPLEMENTATION_SUMMARY.md  PHASE_8_4_IMPLEMENTATION_SUMMARY.md  S5_INTEGRATION.md  VECTOR_DB_NODE_BINDINGS.md  progressive context → compaction → RAG approach.md
docs/sdk-reference/: CLEANUP_FIX_RESULTS.md  IMPLEMENTATION_WASM_BINDINGS.md  OPERATOR_SUPPORT_CLARIFICATION.md  REPRODUCTION_GUIDE_V0.2.1.md  ROOT_CAUSE_FOUND.md  SDK_API.md  SESSION_STATE_ANALYSIS.md  TOPK_BUG_FIX_V0.2.2.md  VECTOR_DB_INTEGRATION.md  VERIFICATION_REPORT_V0.2.1.md
examples/: test_deletion.rs  test_search_filter.rs
scripts/: Dockerfile.real-s5  monitor_memory.sh  package.json  profile_memory.sh  real-s5-server-mock.js  real-s5-server.js  test-real-s5.sh  test_server.sh
src/: lib.rs
src/api/: mod.rs  rest.rs
src/cbor/: decoder.rs  encoder.rs  mod.rs
src/client/: mod.rs  rust.rs
src/core/: chunk.rs  chunk_cache.rs  metadata_filter.rs  mod.rs  schema.rs  storage.rs  types.rs  vector_ops.rs
src/hnsw/: core.rs  mod.rs  operations.rs  persistence.rs
src/hybrid/: core.rs  maintenance.rs  mod.rs  persistence.rs  search_integration.rs
src/ivf/: core.rs  mod.rs  operations.rs  persistence.rs
src/storage/: chunk_loader.rs  enhanced_s5_storage.rs  mod.rs  s5_adapter.rs  s5_client.rs  s5_storage.rs  s5_storage_factory.rs
src/types/: mod.rs
test-s5-server/: .gitignore  README.md  package.json  server.js
tests/: cbor_compatibility_tests.rs  integration_chunked_tests.rs  integration_tests.rs  s5_client_tests.rs  s5_storage_tests.rs  test_configuration_management.rs  test_deletion_persistence.rs  test_enhanced_s5_integration.rs  test_s5_mock_integration.rs  test_s5_real_integration.rs  unit_tests.rs
tests/api/: mod.rs  rest.rs  test_rest_api.rs
tests/client/: mod.rs  rust_client.rs
tests/core/: mod.rs  storage.rs  storage_advanced.rs  types.rs  vector_ops.rs  vector_ops_advanced.rs
tests/hnsw/: core.rs  mod.rs  operations.rs  persistence.rs
tests/hybrid/: core.rs  deletion.rs  deletion_persistence.rs  maintenance.rs  mod.rs  search_integration.rs
tests/integration/: chunk_loader_tests.rs  chunked_load_tests.rs  chunked_save_tests.rs  hnsw_lazy_tests.rs  hybrid_lazy_tests.rs  ivf_lazy_tests.rs  large_dataset_tests.rs  manifest_version_tests.rs  metadata_update_persistence_tests.rs  mod.rs  s5_encryption_tests.rs  search_filter_tests.rs
tests/ivf/: core.rs  mod.rs  operations.rs  persistence.rs
tests/unit/: chunk_cache_tests.rs  chunk_tests.rs  ivf_deletion_tests.rs  metadata_filter_tests.rs  mod.rs  schema_validation_tests.rs
