[package]
name = "vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }

# S5 client
# You'll need to add the actual S5 client dependency

# Math and SIMD
nalgebra = "0.32"
simdeez = { version = "1.0", optional = true }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
dashmap = "5.5"
hex = "0.4"
rand = "0.8"

# Compression
zstd = "0.13"

# Hashing
sha2 = "0.10"

# Web framework
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
hyper = "1.0"

# Async runtime
futures = "0.3"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-stream = "0.1"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
proptest = "1.4"
approx = "0.5"
criterion = "0.5"
tempfile = "3.8"
axum-test = "14.0"
mockito = "1.0"

[features]
default = []
simd = ["simdeez"]

[[bench]]
name = "vector_ops"
harness = false

[[bin]]
name = "server"
path = "src/bin/server.rs"