[package]
name = "vector-db-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core vector-db (use workspace dependency)
vector-db = { path = "../..", default-features = false }

# napi-rs for Node.js bindings
napi = { version = "2.16", features = ["tokio_rt", "async", "napi8", "serde-json"] }
napi-derive = "2.16"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
